# pmuc

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  README.md  appveyor.yml  biicode.cmake  biicode.conf
CMakeModules/: FindEIGEN.cmake  FindIconv.cmake  FindOpenCOLLADASW.cmake  FindXIOT.cmake  biicode.cmake
cmake-lib/: CMakeLists.txt
data/: plm-sample_11072013.att  plm-sample_11072013.rvm
src/: main.cpp  optionparser.h
src/api/: lib_export.h  rvmcolorhelper.cpp  rvmcolorhelper.h  rvmmeshhelper.cpp  rvmmeshhelper.h  rvmmeshhelper2.cpp  rvmmeshhelper2.h  rvmparser.cpp  rvmparser.h  rvmprimitive.h  rvmreader.cpp  rvmreader.h  vector3f.cpp  vector3f.h
src/common/: stringutils.cpp  stringutils.h
src/converters/: colladaconverter.cpp  colladaconverter.h  dslconverter.cpp  dslconverter.h  dslwriter.cpp  dslwriter.h  dummyreader.cpp  dummyreader.h  ifcconverter.cpp  ifcconverter.h  ifcwriter.h  stlconverter.cpp  stlconverter.h  x3dconverter.cpp  x3dconverter.h
