project(pmuc)
cmake_minimum_required(VERSION 2.8)

IF(BIICODE)
   INCLUDE("biicode.cmake")
   RETURN()
ENDIF()

SET(CMAKE_MODULE_PATH "${pmuc_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

find_package(OpenGL REQUIRED)


# Set C++11 flags to makesome function work
if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

find_package(XIOT)
if (XIOT_FOUND)
    include_directories( ${XIOT_INCLUDE_DIR} )
    add_definitions( -DXIOT_FOUND )
endif (XIOT_FOUND)
find_package(OpenCOLLADASW)
if (OPENCOLLADASW_FOUND)
    include_directories( ${OPENCOLLADASW_INCLUDE_DIR} )
    include_directories( ${OPENCOLLADABU_INCLUDE_DIR} )
    add_definitions( -DOPENCOLLADASW_FOUND )
endif (OPENCOLLADASW_FOUND)
find_package(EIGEN REQUIRED)
include_directories( ${EIGEN_INCLUDE_DIR} )
find_package(Iconv)
if (ICONV_FOUND)
    include_directories( ${ICONV_INCLUDE_DIR} )
    add_definitions( -DICONV_FOUND )
endif (ICONV_FOUND)

aux_source_directory(src SRC_LIST)
aux_source_directory(src/api APISRC_LIST)
aux_source_directory(src/converters CONVERTERSSRC_LIST)

add_library(rvm ${APISRC_LIST})
if (ICONV_FOUND)
    target_link_libraries(rvm STATIC ${ICONV_LIBRARY})
endif (ICONV_FOUND)

add_executable(${PROJECT_NAME} ${SRC_LIST} ${APISRC_LIST} ${CONVERTERSSRC_LIST})
if (XIOT_FOUND)
    target_link_libraries(${PROJECT_NAME} ${OPENCOLLADASW_LIBRARIES} ${OPENGL_LIBRARIES})
endif (XIOT_FOUND)
if (OPENCOLLADASW_FOUND)
    target_link_libraries(${PROJECT_NAME} ${XIOT_LIBRARY})
endif (OPENCOLLADASW_FOUND)
if (ICONV_FOUND)
    target_link_libraries(${PROJECT_NAME} ${ICONV_LIBRARY})
endif (ICONV_FOUND)
